Update zola base_url

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://teunvanwezel.nl"
+base_url = "https://teunvw14.github.io"
 
 title = "Teun van Wezel's Blog"
 
