--- a/config.toml
+++ b/config.toml
@@ -9,11 +9,15 @@ compile_sass = true
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = false
 
+
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
 highlight_theme = "1337"
+
+# open links in new tab
+external_links_target_blank = true
 
 [extra]
 katex_enable = true
@@ -31,6 +35,7 @@ favicon = "/icon/favicon.png"
 
 # show in the footer
 copyright = "Teun van Wezel"
+
 
 # optional: config your i18n entry
 [extra.translations]
