--- a/config.toml
+++ b/config.toml
@@ -9,12 +9,10 @@ compile_sass = true
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = false
 
-
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
-highlight_theme = "1337"
 
 # open links in new tab
 external_links_target_blank = true
@@ -39,7 +37,6 @@ copyright = "Teun van Wezel"
 # google analytics
 ga = "G-4SM5P4FCHX"
 
-
 # optional: config your i18n entry
 [extra.translations]
 languages = [{name = "en", url = "/"}]
@@ -55,7 +52,7 @@ read_time = "minute read"
 all_tags = "All tags"
 menus = [
     { name = "Blog", url = "/", weight = 2 },
-    { name = "All blogposts", url = "/posts", weight = 2 },
+    { name = "All posts", url = "/posts", weight = 2 },
 ]
 
 # config social icon info in the footer
